XMLtoCSV/objects/unpackaged/objects/Publication__c.object
<CustomObject>
    <description>Published documents by Professionals</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Publications</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date the publication was published</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <description>Picklist of Journals in which this publication was published</description>
        <label>Journal</label>
        <picklist>
            <picklistValues>
                <fullName>JAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Journal_vod__c</fullName>
        <description>Text field to store the name of the journal</description>
        <label>Journal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PubMed_ID_Name_vod__c</fullName>
        <description>Text field that stores the name of the PubMed id that displays in the UI</description>
        <label>PubMed ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PubMed_URL_vod__c</fullName>
        <description>Hyperlink URL for PubMed Article</description>
        <label>PubMed URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Publication_Type_vod__c</fullName>
        <description>The type of Publication</description>
        <label>Publication Type</label>
        <picklist>
            <picklistValues>
                <fullName>Approval_Report_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comment_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comparative/Evaluation_Study_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General_Article_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTA_Report_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical_Guideline_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meta-Analysis_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial_Publication_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of the publication</description>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <label>Publication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PN-{00000}</displayFormat>
        <label>Publications ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>